# K8sResourceResizer

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.example  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: build-and-push.yml  resource-analyzer.yml
docker/: Dockerfile  README.md  entrypoint.sh  index.html  install.sh
docs/: docker.md
github/: index.html
scripts/: bootstrap.sh
search/: search_index.json
src/: __init__.py  amp_client.py  argocd_client.py  logger.py  main.py  manifest_finder.py  manifest_updater.py  parser.py  pr_opener.py  prometheus_client.py  prompt_creator.py  resource_optimizer.py  severity.py  utils.py
src/strategy/: __init__.py  adaptive_strategy.py  base_strategy.py  basic_strategy.py  ensemble_strategy.py  moving_average_strategy.py  pmdarima_strategy.py  prophet_strategy.py  quantile_regression_strategy.py  strategy_factory.py  time_aware_strategy.py  trend_aware_strategy.py  workload_aware_strategy.py
tests/helm/applications/: production-application.yaml  staging-application.yaml
tests/helm/hello-world/: Chart.yaml
tests/helm/hello-world/environments/: staging.yaml
tests/helm/hello-world/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
tests/integration/helm/applications/: production-application.yaml  staging-application.yaml
tests/integration/helm/hello-world/: values.yaml
tests/kustomize/applications/: hello-world-prod.yaml  hello-world-staging.yaml
(+7 files in other folders)
