[tool.poetry]
name = "K8sResourceResizer"
version = "0.2.0"
description = "A tool to manage k8s pod resources"
authors = ["Hari Charan Ayada <hcayada@amazon.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.12.0"
pyyaml = "^6.0"
loguru = "^0.7.2"
boto3 = "1.35.99"
numpy = "1.26.4"
pandas = "2.2.0"
scikit-learn = "1.5.1"
statsmodels = "^0.14.1"
click = "8.1.8"
prometheus_api_client = "0.5.5"
ruamel-yaml = "0.18.10"
requests = "2.32.3"
requests-aws4auth = "1.3.1"
python-dotenv = "^1.0.1"
scipy = "^1.12.0"
pyinstaller = "^6.12.0"
setuptools = "70.0.0"
prophet = "1.1.6"
cmdstanpy = "^1.2.0"
matplotlib = "^3.8.3"
Cython = "^3.0.8"
gitpython = "^3.1.42"
pmdarima = "2.0.4"

[tool.poetry.scripts]
k8s-limits = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=0.29.21,<3.0", "numpy>=1.21.2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-ignore = ["E203", "W503"]
exclude = ["build", "dist", ".venv", ".git", "docker", "__pycache__", "venv", ".mypy_cache", ".pytest_cache"]
per-file-ignores = { "__init__.py" = ["F401"] }
